--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "msmba-workflow-winter2016-team1/mwp"]
 	path = msmba-workflow-winter2016-team1/mwp
 	url = https://github.com/MSMBA/msmba-workflow.git
+[submodule "msmba-workflow-winter2016-team2/mwp"]
+	path = msmba-workflow-winter2016-team2/mwp
+	url = https://github.com/MSMBA/msmba-workflow.git
